fixed alignment with css

--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,7 @@ img {
   display: inline-block;
   padding-bottom: 50px; }
   .content-blog h1 {
+    font-size: 44px;
     padding-top: 20px;
     margin-top: 30px; }
   .content-blog p {
