--- a/sass/content.scss
+++ b/sass/content.scss
@@ -22,6 +22,7 @@ img {
     padding-bottom: 50px;
 
     h1 {
+        font-size: 44px;
         padding-top: 20px;
         margin-top: 30px;
     }
